moved processing of edi 2 xml to the processor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(ediconv main.cpp
         EdiFile.cpp
+        SchemaFile.cpp
+        edi2XmlProcessor.cpp
 )
 target_link_libraries(ediconv PUBLIC pugixml)
 
