can convert xml to edifact with the exception of composit data elements. Those will come next.

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,8 @@ tests/Testing/
 tests/cmake_install.cmake
 tests/test_edifile
 tests/test_schemafile
-
+.idea/vcs.xml
+tests/test_common
+tests/test_xml2EdiProcessor
+tests/test_xml2metaprocessor
 
